Added touch features to game

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="lives" id="livestotal">LIVES: <span id="lives"></span>
                     </div>
                 <div class="game-over" id="game-over">GAME OVER
-                    <p><span onclick="world.showMenu();">Start</span>
+                    <p><span onclick="world.showMenu();" id="start-touch">Start</span>
                     </p>
                 </div>
             </div>
