--- a/index.html
+++ b/index.html
@@ -4,25 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Effective JavaScript: Frogger</title>
+    <title>Frogger Arcade Clone</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+
+
+    <div class="wrapper">
+      <div class="container">
+        <div class="canvas-container" id="container">
+            <div class="canvas-overlay" id="overlay">
+              <div class="score" id="scoretotal">SCORE: <span id="score"></span>
+                    </div>
+                <div class="topscore" id="toptotal">TOP SCORE: <span id="topscore"></span>
+                    </div>
+                <div class="lives" id="livestotal">LIVES: <span id="lives"></span>
+                    </div>
+                <div class="game-over" id="game-over">GAME OVER
+                    <p><span onclick="world.showMenu();" id="start-touch">Start</span>
+                    </p>
+                </div>
+            </div>
+            <div class="canvas-menu">
+            </div>
+        </div>
+      </div>
+    </div>
     <script src="js/menu.js"></script>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
-    <div class="score" id="scoretotal">SCORE: <span id="score"></span>
-    </div>
-    <div class="topscore" id="toptotal">TOP SCORE: <span id="topscore"></span>
-    </div>
-    <div class="lives" id="livestotal">LIVES: <span id="lives"></span>
-    </div>
-    <div class="game-over" id="game-over">GAME OVER
-        <p><span onclick="world.showMenu();">Start</span>
-        </p>
-    </div>
+
+
+
+
 </body>
 
 </html>
