--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Frogger Arcade Clone</title>
+    <link rel="stylesheet" href="css/kenney-icons.css">
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
@@ -31,9 +33,11 @@
         </div>
       </div>
     </div>
+
     <script src="js/menu.js"></script>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
+    <script type='text/javascript' src='js/gamecontroller.js'></script>
     <script src="js/engine.js"></script>
 
 
