Add sound features for mobile devices (try intregrating SoundManager2).  Adjust buffertop of controller canvas (was being cut off on Galaxy Note 5 device).   Add additional sound formats (vs. just having .wav).

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div class="container">
         <div class="canvas-container" id="container">
             <div class="canvas-overlay" id="overlay">
+<!--             <audio id = "gameSound"></audio> -->
               <div class="score" id="scoretotal">SCORE: <span id="score"></span>
                     </div>
                 <div class="topscore" id="toptotal">TOP SCORE: <span id="topscore"></span>
@@ -36,8 +37,9 @@
 
     <script src="js/menu.js"></script>
     <script src="js/resources.js"></script>
+    <script src="js/soundmanager2.js"></script>
     <script src="js/app.js"></script>
-    <script type='text/javascript' src='js/gamecontroller.js'></script>
+    <script src='js/gamecontroller.js'></script>
     <script src="js/engine.js"></script>
 
 
